# opensatcom

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  background_information.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: citation.md  cli.md  index.md  notebooks.md  quickstart.md
docs/api/: antenna.md  geometry.md  io.md  link.md  modem.md  payload.md  propagation.md  reports.md  rf.md  trades.md  viz.md  world.md
docs/api/core/: models.md  protocols.md  units.md
docs/getting-started/: installation.md  quickstart.md
examples/: example_config.yaml  multibeam_config.yaml
notebooks/: 01_quickstart.ipynb  02_mission_simulation.ipynb  03_multibeam_payload.ipynb  04_propagation_models.ipynb  05_trade_studies.ipynb
src/opensatcom/: __init__.py
src/opensatcom/antenna/: __init__.py  cosine.py  coupling.py  edgefem_loader.py  pam.py  parametric.py
src/opensatcom/cli/: __init__.py  __main__.py  builders.py  main.py
src/opensatcom/core/: __init__.py  constants.py  models.py  protocols.py  units.py
src/opensatcom/geometry/: __init__.py  doppler.py  sgp4_provider.py  slant.py
src/opensatcom/io/: __init__.py  config_loader.py  workspace.py
src/opensatcom/link/: __init__.py  engine.py  polarization.py
src/opensatcom/modem/: __init__.py  acm.py  analytic_curves.py  curves.py  dvbs2.py  modem.py
src/opensatcom/payload/: __init__.py  beam.py  beammap.py  beamset.py  capacity.py  interference.py
src/opensatcom/propagation/: __init__.py  composite.py  fspl.py  gas.py  rain.py  scintillation.py
src/opensatcom/reports/: __init__.py  beammap.py  mission.py  snapshot.py
src/opensatcom/rf/: __init__.py  cascade.py  chain.py
src/opensatcom/trades/: __init__.py  batch.py  doe.py  pareto.py  requirements.py  sensitivity.py
src/opensatcom/viz/: __init__.py  constellation.py  heatmaps.py  statistical.py  timeline.py  trades.py
src/opensatcom/world/: __init__.py  handover.py  multisim.py  network_sim.py  providers.py  scheduler.py  sim.py  traffic.py
tests/: conftest.py
tests/fixtures/: synthetic_coupling.npz
tests/golden/: test_acm_golden.py  test_beammap_golden.py  test_coupling_golden.py  test_fspl_golden.py  test_handover_golden.py  test_mission_golden.py  test_modem_golden.py  test_network_golden.py  test_propagation_golden.py  test_rf_cascade_golden.py
tests/integration/: test_cli_batch.py  test_cli_beammap.py  test_cli_mission.py  test_cli_run.py  test_cli_sensitivity.py  test_cli_trades.py  test_hello_world.py
tests/unit/: test_analytic_curves.py  test_antenna.py  test_batch.py  test_beam.py  test_beammap.py  test_beammap_report.py  test_beamset.py  test_capacity.py  test_config_loader.py  test_config_payload.py  test_config_rf_cascade.py  test_cosine_antenna.py  test_coupling_antenna.py  test_doe.py  test_doppler.py  test_dvbs2.py  test_edgefem_loader.py  test_gas.py  test_geometry.py  test_handover.py  test_interference.py  test_link_engine.py  test_models.py  test_modem.py  test_multisim.py  test_network_sim.py  test_pareto.py  test_polarization.py  test_propagation.py  test_rain.py  test_reports.py  test_rf.py  test_rf_cascade.py  test_scheduler.py  test_scintillation.py  test_sensitivity.py  test_sgp4_provider.py  test_traffic.py  test_units.py  test_viz.py  (+1 more)
